Collect policy data from old neural